add VERBOSE build option to travis-ci, add -std=c11 build option to CMakeLists.txt

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ compiler:
     - clang
 
 script:
-    - mkdir -p build && cd build && cmake .. && make
+    - mkdir -p build && cd build && cmake .. && make VERBOSE=y
