update bench result to README.md
- remove bench directory
- add restrict keyword for performance
- change build option debug to release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set (ahocorasick_VERSION_MINOR 1)
 
 # Choose Release or Debug
 if(NOT CMAKE_BUILD_TYPE)
-    #set(CMAKE_BUILD_TYPE Release)
-    set(CMAKE_BUILD_TYPE Debug)
+    set(CMAKE_BUILD_TYPE Release)
+    #set(CMAKE_BUILD_TYPE Debug)
 endif(NOT CMAKE_BUILD_TYPE)
 
 set(CMAKE_C_FLAGS_RELEASE "-Wall -std=c99 -O2")
